--- a/css/style.css
+++ b/css/style.css
@@ -28,16 +28,12 @@ h1 {
   margin-bottom: 30px;
 }
 
-h2 {
-  text-align: center;
-  color: #153416;
-  margin-bottom: 20px;
-}
-
 .wrapper {
-  background: url("../images/main-bg.webp") no-repeat center center fixed;
+  background: url("../images/main-bg.webp") no-repeat center center;
   background-size: cover;
   position: relative;
+  overflow: hidden;
+  height: 100vh;
 }
 
 .wrapper::before {
@@ -53,10 +49,12 @@ h2 {
 
 #form {
   max-width: 500px;
-  min-height: 100vh;
+  height: 100%;
   margin-left: auto;
   background: rgba(233, 233, 233, 0.25);
   backdrop-filter: blur(5px);
+  padding: 60px 0;
+  overflow: auto;
 }
 
 .container {
@@ -66,6 +64,10 @@ h2 {
 
 /* ?SWITCH */
 
+.switch {
+  margin-bottom: 75px;
+}
+
 .switch input {
   position: absolute;
   z-index: -1;
@@ -73,12 +75,11 @@ h2 {
 }
 
 .switch label {
-  display: inline-block;
+  display: flex;
   width: 100%;
   height: 36px;
   border: 1px solid #153416;
   border-radius: 30px;
-  margin: 60px 0 75px;
   position: relative;
 }
 
@@ -87,11 +88,12 @@ h2 {
   position: absolute;
   top: 1px;
   left: 1px;
+  bottom: 1px;
   width: 50%;
-  height: 32px;
   background: #153416;
   border-radius: 30px;
   transition: 0.3s linear;
+  z-index: -1;
 }
 
 .switch input:checked + label::before {
@@ -100,18 +102,14 @@ h2 {
 }
 
 .switch-text {
-  position: absolute;
-  top: 50%;
-  left: 20%;
-  transform: translateY(-50%);
-}
-
-.text2 {
-  left: 65%;
+  display: flex;
+  flex: 1 1 50%;
+  justify-content: center;
+  align-items: center;
 }
 
 .switch input:focus + label::before {
-  border: 1px solid #ffffff;
+  border: 1px solid #153416;
 }
 
 /* ?EMAIL & PASSWORD */
@@ -185,8 +183,8 @@ h2 {
   transform: rotate(38deg);
 }
 
-.under-pass-link a {
-  display: inline-block;
+.under-pass-link {
+  display: block;
   padding: 5px;
   color: #153416;
 }
@@ -197,7 +195,7 @@ h2 {
 
 /* ?ENTER */
 
-.enter input {
+.enter {
   display: inline-block;
   width: 100%;
   height: 44px;
@@ -218,12 +216,18 @@ h2 {
   margin-bottom: 30px;
 }
 
-.registration span {
+.registration p {
   color: #153416;
 }
 
 .registration a {
   color: #ffffff;
+}
+
+.enter-media {
+  text-align: center;
+  color: #153416;
+  margin-bottom: 20px;
 }
 
 /* ?ICONS-LIST */
@@ -233,6 +237,10 @@ h2 {
   justify-content: center;
   gap: 15px;
   padding-bottom: 20px;
+}
+
+.icons-list a {
+  display: block;
 }
 
 .icon {
